[package]
name = "img-utils"
version = "0.1.0"
edition = "2021"

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"

[dependencies]
image = "0.25.2"
libloading = "0.8"
anyhow = "1.0.44"
env_logger = "0.11.5"
log = "0.4.22"
eframe = "0.29.1"
egui = "0.29.1"
instant = "0.1.13"
rfd = "0.15.0"
plotters = "0.3.7"
